--- a/tools/libraries/isotp/SConscript
+++ b/tools/libraries/isotp/SConscript
@@ -12,7 +12,7 @@ class LibraryIsoTp(Library):
     def config(self):
         self.CPPDEFINES = []
         self.include = '%s/include' % (CWD)
-        self.LIBS = ['StdTimer', 'Simulator', 'CanLib', 'LinLib', 'DevLib', 'DoIPClient']
+        self.LIBS = ['StdTimer', 'Simulator', 'CanLib', 'LinLib', 'DevLib', 'DoIPClient', 'libuuid']
         for libName, source in libsForIsoTp.items():
             self.LIBS.append(libName)
             self.RegisterConfig(libName, source)
